# vector-space-model

./: .gitignore  AGENTS.md  README.md  pyproject.toml
tests/: test_text_processing.py  test_txt_loader.py
vsm/: __init__.py  engine.py  exceptions.py  result.py  text_processor.py
vsm/loaders/: __init__.py  txt_loader.py
vsm/models/: __init__.py  bm25_model.py  tfidf_model.py
vsm/text_processing/: __init__.py  languages.py  lemmatizer.py  normalizer.py  processor.py  stemmer.py  stopwords.py  tokenizer.py
